# irb140_layout

./: README.md
irb140_layout/: CMakeLists.txt  package.xml
irb140_layout/config/: layout.perspective
irb140_layout/config/joints/: joints.yaml
irb140_layout/config/rviz/: rviz_config_2.rviz
irb140_layout/launch/: irb140_rviz.launch  layout.launch  layout_gripper.launch  moveit_interface.launch  test.launch
irb140_layout/objects/mesa/: model.sdf
irb140_layout/scripts/: calib_camera.ipynb  depth_image.py  irb140_moveit.py  point_cloud.pcd  take_depth_photo.py  take_photo.py
irb140_layout/urdf/: irb140.urdf  irb140.xacro  irb140_alone.xacro
irb140_layout/worlds/: layout.world
irb140_layout_moveit/: CMakeLists.txt  package.xml
irb140_layout_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  px_robot.srdf
irb140_layout_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
